...
            android:text="@string/d_stadt"
            android:textAlignment="textStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="16sp"
            android:typeface="normal"
            android:visibility="visible"
            app:layout_constraintBaseline_toBaselineOf="@+id/stadtText2"
            app:layout_constraintLeft_toLeftOf="@+id/textView9"
            tools:layout_constraintLeft_creator="1" />

        <AutoCompleteTextView
            android:id="@+id/landText2"
            style="@android:style/Widget.AutoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/box_fill"
            android:completionHint="Region, Lage, Standort"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/bundeslandText2"
            app:layout_constraintRight_toRightOf="@+id/bundeslandText2"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/bundeslandText2"
            app:layout_constraintHorizontal_bias="0.0" />

...
            android:layout_height="28dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/box_fill"
            android:completionHint="Region, Lage, Standort"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/landkreisText2"
            app:layout_constraintRight_toRightOf="@+id/landkreisText2"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/landkreisText2" />

        <TextView
...
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/button_cancel"
...
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/dismissbutton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:elevation="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/button_okay"
            android:textAlignment="center"
...
