<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/felderfasseninfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeldErfInfoScreen">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/addInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:backgroundTint="@color/kind_buttons"
            android:text="@string/add_btn"
            android:visibility="visible"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/save" />

        <Button
            android:id="@+id/setMarker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:backgroundTint="@color/kind_buttons"
            android:elevation="10dp"
            android:text="Button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/gps"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gps"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="1dp"
            android:backgroundTint="@color/kind_buttons"
            android:elevation="10dp"
            android:text="Button"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@+id/addInfo"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintRight_creator="1" />

        <Button
            android:id="@+id/gps"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:backgroundTint="@color/kind_buttons"
            android:elevation="10dp"
            android:text="Button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/save"
            app:layout_constraintTop_toTopOf="@+id/save"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintRight_toLeftOf="@+id/save" />
    </android.support.constraint.ConstraintLayout>

    <!--<TextView
        android:id="@+id/felderf_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/view_container"
            android:layout_width="356dp"
            android:layout_height="303dp"
            android:visibility="visible"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:text="@string/simpletext"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="42dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/feld_id_field"
            android:layout_width="180dp"
            android:layout_height="43dp"
            android:completionHint="Feld - ID"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/feld_art_field"
            android:layout_marginEnd="16dp" />

        <AutoCompleteTextView
            android:id="@+id/feld_art_field"
            android:layout_width="180dp"
            android:layout_height="43dp"
            android:completionHint="Feld - Art"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/view_container"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="132dp"
            android:layout_marginBottom="145dp"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/feld_region_field"
            android:layout_width="180dp"
            android:layout_height="43dp"
            android:completionHint="Feld - Region"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/feld_art_field"
            android:layout_marginEnd="16dp" />

        <AutoCompleteTextView
            android:id="@+id/feld_vertrag_field"
            android:layout_width="180dp"
            android:layout_height="43dp"
            android:completionHint="Feld - Vertrag"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/feld_region_field"
            android:layout_marginEnd="16dp" />

    </android.support.constraint.ConstraintLayout>-->

</FrameLayout>
